padding fix on mobile for .card

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -934,6 +934,11 @@ background-repeat: no-repeat;
     /*font-size: 24px;*/
   }
 
+  #home .card {
+    border-radius: 0;
+    padding: 30px;
+  }
+
   #home p {
     padding: 0 30px 0 30px;
   }
